.k8s/prod/bimble-backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bimble-backend-depl
  namespace: bimble
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bimble-backend-pod
  template:
    metadata:
      labels:
        app: bimble-backend-pod
    spec:
      containers:
        - name: bimble-backend
          image: huseinnashr/bimble-backend:#{RELEASE_VERSION}
          imagePullPolicy: Always
