.k8s/prod/bimble-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bimble-backend-svc
  namespace: bimble
spec:
  selector:
    app: bimble-backend-pod
  ports:
    - name: bimble-backend-tcp
      protocol: TCP
      port: 80
      targetPort: 8080
