.k8s/prod/bimble-backend-ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bimble-backend-ingress-grpc
  namespace: bimble
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
    - host: bimble-backend-grpc.ordinarytechfolks.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bimble-backend-svc
                port:
                  number: 81
  tls:
    - hosts: 
      - bimble-backend-grpc.ordinarytechfolks.com
      secretName: otfs-tls
